Fix for Bug #22199 (fputs() + fgets() destroys readbuffer for non-seekable streams).